--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
+@import 'swiper/css/bundle';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -39,18 +41,45 @@
     }
 }
 
-.slide-in-container {
-    position: absolute;
-    top: 0;
-    left: 0; /* Updated to start at the left edge of the screen */
-    width: 100%;
-    height: 100%;
-    transform: translateX(-150%); /* Start off-screen to the left */
-    animation: slideIn 2.5s ease-in-out forwards; /* Apply the slide-in animation */
+/* Swiper Styles */
+
+/* .reflection {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: -50px;
+  background: linear-gradient(transparent, rgba(255, 255, 255, 0.4));
+  transform: scaleY(-1);
+  z-index: 2;
+}  */
+
+.swiper-container {
+  width: 100%;
+  height: 400px; /* Adjust the slide height as needed */
 }
 
-@keyframes slideIn {
-    to {
-        transform: translateX(0); /* Slide the container in from the left to the center */
-    }
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
+
+.slide-content {
+  position: relative;
+}
+
+.slide-content img {
+  max-width: 100%;
+  height: auto;
+  z-index: 1; /* Place the image above the reflection */
+}
+
+.swiper-button-next, .swiper-button-prev, .swiper-pagination{
+    color: red;
+}
+
+
+
+
